--- a/index.html
+++ b/index.html
@@ -2,9 +2,24 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://media.kzco.in/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React + TS</title>
+    	
+  <!-- Facebook Meta Tags -->
+  <meta property="og:url" content="https://my-app-react-seven.vercel.app/">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Vite + React + TS">
+  <meta property="og:description" content="NamNguyen Test React js">
+  <meta property="og:image" content="https://media.kzco.in/social/SocialPreview.png">
+
+  <!-- Twitter Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta property="twitter:domain" content="my-app-react-seven.vercel.app">
+  <meta property="twitter:url" content="https://my-app-react-seven.vercel.app/">
+  <meta name="twitter:title" content="Vite + React + TS">
+  <meta name="twitter:description" content="NamNguyen Test React js">
+  <meta name="twitter:image" content="https://media.kzco.in/social/SocialPreview.png">
   </head>
   <body>
     <div id="root"></div>
