--- a/index.html
+++ b/index.html
@@ -1,28 +1,36 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="https://media.kzco.in/logo.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    	
-  <!-- HTML Meta Tags -->
-      <title>Vite + React + TS</title>
-      <meta name="description" content="NamNguyen Test React js">
+    <!-- HTML Meta Tags -->
+<title>Vite + React + TS</title>
+<meta name="description" content="">
 
-      <!-- Facebook Meta Tags -->
-      <meta property="og:url" content="https://my-app-react-seven.vercel.app">
-      <meta property="og:type" content="website">
-      <meta property="og:title" content="Vite + React + TS">
-      <meta property="og:description" content="NamNguyen Test React js">
-      <meta property="og:image" content="https://media.kzco.in/social/SocialPreview.png">
+<!-- Facebook Meta Tags -->
+<meta property="og:url" content="https://my-app-react-seven.vercel.app/">
+<meta property="og:type" content="website">
+<meta property="og:title" content="Vite + React + TS">
+<meta property="og:description" content="">
+<!--
+  You can generate this image URL dynamically: https://ogcdn.net/c078a98b-9a33-4eaf-a5cf-e5ebf3ea450c/v1/{site_text}/{title_text}/{description_text}/{image_url}/og.png
+  Replace the variables in the brackets with your own values and use this URL in the image tag below this comment. Ensure values are URL encoded.
+  For more information, read: https://www.opengraph.xyz/blog/how-to-implement-dynamic-open-graph-images
+-->
+<meta property="og:image" content="https://ogcdn.net/c078a98b-9a33-4eaf-a5cf-e5ebf3ea450c/v1/my-app-react-seven.vercel.app/Vite%20%2B%20React%20%2B%20TS/If%20you%E2%80%99re%20an%20online%20store%20owner%2C%20you%20should%20be%20using%20Meta%20Ads%20campaigns.%20Here%20is%20a%20three-tiered%20campaign%20strategy%20that%20will%20boost%20your%20online%20e-commerce%20sales./https%3A%2F%2Fcdn.theopengraph.com%2Fproduction%2Fdocuments%2Fd564a463-1c51-4259-991d-0d17bf3e0391.jpg%3Ftoken%3D-hKrjcO4EFDmPh0lgxSanJdH2MZ9gYnfw4V87WUckbA%26height%3D800%26width%3D1200%26expires%3D33239188519/og.png">
 
-      <!-- Twitter Meta Tags -->
-      <meta name="twitter:card" content="summary_large_image">
-      <meta property="twitter:domain" content="my-app-react-seven.vercel.app">
-      <meta property="twitter:url" content="https://my-app-react-seven.vercel.app">
-      <meta name="twitter:title" content="Vite + React + TS">
-      <meta name="twitter:description" content="NamNguyen Test React js">
-      <meta name="twitter:image" content="https://media.kzco.in/social/SocialPreview.png">
+<!-- Twitter Meta Tags -->
+<meta name="twitter:card" content="summary_large_image">
+<meta property="twitter:domain" content="my-app-react-seven.vercel.app">
+<meta property="twitter:url" content="https://my-app-react-seven.vercel.app/">
+<meta name="twitter:title" content="Vite + React + TS">
+<meta name="twitter:description" content="">
+<!--
+  You can generate this image URL dynamically: https://ogcdn.net/c078a98b-9a33-4eaf-a5cf-e5ebf3ea450c/v1/{site_text}/{title_text}/{description_text}/{image_url}/og.png
+  Replace the variables in the brackets with your own values and use this URL in the image tag below this comment. Ensure values are URL encoded.
+  For more information, read: https://www.opengraph.xyz/blog/how-to-implement-dynamic-open-graph-images
+-->
+<meta name="twitter:image" content="https://ogcdn.net/c078a98b-9a33-4eaf-a5cf-e5ebf3ea450c/v1/my-app-react-seven.vercel.app/Vite%20%2B%20React%20%2B%20TS/If%20you%E2%80%99re%20an%20online%20store%20owner%2C%20you%20should%20be%20using%20Meta%20Ads%20campaigns.%20Here%20is%20a%20three-tiered%20campaign%20strategy%20that%20will%20boost%20your%20online%20e-commerce%20sales./https%3A%2F%2Fcdn.theopengraph.com%2Fproduction%2Fdocuments%2Fd564a463-1c51-4259-991d-0d17bf3e0391.jpg%3Ftoken%3D-hKrjcO4EFDmPh0lgxSanJdH2MZ9gYnfw4V87WUckbA%26height%3D800%26width%3D1200%26expires%3D33239188519/og.png">
+
+<!-- Meta Tags Generated via https://www.opengraph.xyz -->
 
   <!-- Meta Tags Generated via https://www.opengraph.xyz -->
   </head>
