--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <meta name="description" content="">
 
 <!-- Facebook Meta Tags -->
-<meta property="og:url" content="https://holdstation.exchange" />
-    <link rel="canonical" href="https://holdstation.exchange" />
+    <meta property="og:url" content="https://my-app-react-seven.vercel.app" />
+    <link rel="canonical" href="https://my-app-react-seven.vercel.app" />
     <link rel="stylesheet" href="./src/index.css" />
 
     <meta property="og:type" content="website" />
