--- a/index.html
+++ b/index.html
@@ -1,35 +1,28 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <!-- HTML Meta Tags -->
-<title>Holdstation DeFutures</title>
-<!-- <link rel="shortcut icon" href="./src/images/logo/avatar_holdstation.png" type="image/x-icon" /> -->
-<meta name="description" content="">
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="https://media.kzco.in/logo.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    	
+  <!-- HTML Meta Tags -->
+      <title>Nam test</title>
+      <meta name="description" content="NamNguyen Test React js">
 
-<!-- Facebook Meta Tags -->
-    <meta property="og:url" content="https://my-app-react-seven.vercel.app" />
-    <link rel="canonical" href="https://my-app-react-seven.vercel.app" />
-    <link rel="stylesheet" href="./src/index.css" />
+      <!-- Facebook Meta Tags -->
+      <meta property="og:url" content="https://my-app-react-seven.vercel.app">
+      <meta property="og:type" content="website">
+      <meta property="og:title" content="Vite + React + TS">
+      <meta property="og:description" content="NamNguyen Test React js">
+      <meta property="og:image" content="https://media.kzco.in/social/SocialPreview.png">
 
-    <meta property="og:type" content="website" />
-    <meta property="og:site_name" content="Holdstation DeFutures" />
-    <meta
-      property="og:description"
-      content="The pioneering gasless on-chain futures trading platform, supporting multiple assets, and leverage up to 500x."
-    />
-    <meta property="og:title" content="Holdstation DeFutures" />
-    <meta property="og:image" content="https://static.holdstation.com/logo/exchange/hs-defutures.png" />
-
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Holdstation" />
-    <meta name="twitter:title" content="Holdstation DeFutures" />
-    <meta
-      name="twitter:description"
-      content="The pioneering gasless on-chain futures trading platform, supporting multiple assets, and leverage up to 500x."
-    />
-
-    <meta name="twitter:image" content="https://static.holdstation.com/logo/exchange/hs-defutures.png" />
-<!-- Meta Tags Generated via https://www.opengraph.xyz -->
+      <!-- Twitter Meta Tags -->
+      <meta name="twitter:card" content="summary_large_image">
+      <meta property="twitter:domain" content="my-app-react-seven.vercel.app">
+      <meta property="twitter:url" content="https://my-app-react-seven.vercel.app">
+      <meta name="twitter:title" content="Vite + React + TS">
+      <meta name="twitter:description" content="NamNguyen Test React js">
+      <meta name="twitter:image" content="https://media.kzco.in/social/SocialPreview.png">
 
   <!-- Meta Tags Generated via https://www.opengraph.xyz -->
   </head>
